--- a/lib/lp/translations/stories/translationgroups/20-project-translationgroup.txt
+++ b/lib/lp/translations/stories/translationgroups/20-project-translationgroup.txt
@@ -10,17 +10,10 @@ the Gnome project page and that it has no translation group assigned.
     >>> print gnome_owner_browser.title
     Translatable projects for The GNOME Project
 
-    >>> print extract_text(
-    ...     find_tag_by_id(gnome_owner_browser.contents,
-    ...                    'portlet-translation-permissions'))
-    Translation permissions
-    Translation group: Not assigned
-    Permissions: Open
-
 And now make sure we can see the form to change the translation group
 and permissions on a project.
 
-    >>> gnome_owner_browser.getLink('Change translators').click()
+    >>> gnome_owner_browser.getLink('Settings').click()
     >>> print gnome_owner_browser.title
     Set translation group for The GNOME Project
 
@@ -28,7 +21,7 @@ Other users don't see the "Change translators" link and aren't allowed
 to access the page it leads to.
 
     >>> user_browser.open(translations_page_url)
-    >>> user_browser.getLink("Change translators").click()
+    >>> user_browser.getLink('Settings').click()
     Traceback (most recent call last):
     ...
     LinkNotFoundError
@@ -66,15 +59,3 @@ in the relevant portlet.
     >>> gnome_owner_browser.getLink('Translations').click()
     >>> print gnome_owner_browser.title
     Translatable projects for The GNOME Project
-
-    >>> print extract_text(
-    ...     find_tag_by_id(gnome_owner_browser.contents,
-    ...                    'portlet-translation-permissions'))
-    Translation permissions
-    Translation group: The PolyGlot Translation Group
-    Permissions: Closed
-
-    >>> gnome_owner_browser.getLink('The PolyGlot Translation Group').click()
-    >>> gnome_owner_browser.title
-    '\xe2\x80\x9cThe PolyGlot Translation Group\xe2\x80\x9d
-    Launchpad translation group'
