--- a/lib/lp/translations/doc/poimport-potemplate-syntax-error.txt
+++ b/lib/lp/translations/doc/poimport-potemplate-syntax-error.txt
@@ -97,3 +97,66 @@ And the code composed email with a notification of the error.
     <BLANKLINE>
     The Launchpad team
     <BLANKLINE>
+
+
+== Encoding errors ==
+
+    >>> potemplate = subset.new(
+    ...     name='nonascii',
+    ...     translation_domain='nonascii',
+    ...     path='po/nonascii.pot',
+    ...     owner=person)
+
+    >>> potemplate_contents = u'''
+    ... msgid ""
+    ... msgstr ""
+    ... "Content-Type: text/plain; charset=ASCII\\n"
+    ...
+    ... msgid "\xa9 Yoyodine Industries"
+    ... msgstr ""
+    ... '''.encode('utf-8')
+    >>> published = False
+    >>> entry = translation_import_queue.addOrUpdateEntry(
+    ...     potemplate.path, potemplate_contents, published, person,
+    ...     productseries=series, potemplate=potemplate)
+    >>> transaction.commit()
+    >>> entry.setStatus(RosettaImportStatus.APPROVED)
+    >>> (subject, message) = potemplate.importFromQueue(entry)
+
+The import failed.
+
+    >>> print entry.status.name
+    FAILED
+
+The uploader receives an email about the encoding problem.
+
+    >>> print subject
+    Import problem - nonascii in Mozilla Firefox trunk
+
+    >>> print message
+    Hello Mark Shuttleworth,
+    <BLANKLINE>
+    On ..., you uploaded a file with translation templates for nonascii
+    in Mozilla Firefox trunk to Launchpad.
+    <BLANKLINE>
+    The file could not be imported because of text encoding problems.
+    ...
+    <BLANKLINE>
+    The specific error message was:
+    <BLANKLINE>
+    'ascii' codec can't decode byte ...
+    <BLANKLINE>
+    For your convenience, you can find the file you uploaded at:
+    http://localhost:58000/.../nonascii.pot
+    <BLANKLINE>
+    Thank you,
+    <BLANKLINE>
+    The Launchpad team
+    <BLANKLINE>
+
+The queue entry's error_output field also contains a brief
+description of the error.
+
+    >>> print entry.error_output
+    'ascii' codec can't decode byte ... in position ...: ordinal not in
+    range(128)
