--- a/lib/lp/translations/browser/tests/translationmessage-views.txt
+++ b/lib/lp/translations/browser/tests/translationmessage-views.txt
@@ -481,12 +481,21 @@ languages...
 
     >>> len(suggestions.submissions)
     1
-    >>> sorted(suggestions.submissions[0].items())
+    >>> submission = suggestions.submissions[0]
+    >>> sorted([(attr, getattr(submission, attr))
+    ...         for attr in dir(submission)
+    ...         if not attr.startswith('_')])
     [('date_created', ...),
      ('id', 703),
-     ('language', ...), ('person', ...),
+     ('is_empty', False),
+     ('is_local_to_pofile', False),
+     ('language', ...),
+     ('legal_warning', False),
+     ('person', ...),
      ('plural_index', 0),
-     ('pofile', ...), ('potmsgset', ...),
+     ('pofile', ...),
+     ('potmsgset', ...),
+     ('suggestion_dismissable_class', u'msgset_15_dismissable_button'),
      ('suggestion_html_id', u'msgset_15_ja_suggestion_703_0'),
      ('suggestion_text', u'Foo <code>%d</code>'),
      ('translation_html_id', u'msgset_15_es_translation_0'),
