Split JS out of templates and get remaining ID construction out into view as well.

--- a/lib/lp/translations/stories/translationgroups/60-translation-suggestions.txt
+++ b/lib/lp/translations/stories/translationgroups/60-translation-suggestions.txt
@@ -82,5 +82,5 @@ And there's also a separate translation coming from upstream:
 
     >>> print find_tag_by_id(browser.contents, "msgset_134_packaged_origin")
     <...
-    ...Translated by...Carlos Perelló Marín...2005-05-06...
+    ...Suggested by...Carlos Perelló Marín...2005-05-06...
 
