--- a/lib/lp/translations/browser/tests/translationmessage-views.txt
+++ b/lib/lp/translations/browser/tests/translationmessage-views.txt
@@ -491,10 +491,12 @@ languages...
      ('is_local_to_pofile', False),
      ('language', ...),
      ('legal_warning', False),
+     ('origin_html_id', u'msgset_15_ja_suggestion_703_0_origin'),
      ('person', ...),
      ('plural_index', 0),
      ('pofile', ...),
      ('potmsgset', ...),
+     ('row_html_id', ''),
      ('suggestion_dismissable_class', u'msgset_15_dismissable_button'),
      ('suggestion_html_id', u'msgset_15_ja_suggestion_703_0'),
      ('suggestion_text', u'Foo <code>%d</code>'),
