[trivial] Comment on README so we can increment revno and therefore push code cleanly with new configs

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ This is the top level project, that supplies the infrastructure for testing,
 and running launchpad.
 
 Documentation is in the doc directory or on the wiki.
+
+This is an arbitrary commit to increment the revno so we can push code out
+cleanly.
